# MDR_Project

./: .gitignore
catkin_ws/src/AprilTagLocalization/: CMakeLists.txt  README.md  package.xml  tags.yaml
catkin_ws/src/AprilTagLocalization/config/: hw4_tags.yaml
catkin_ws/src/AprilTagLocalization/launch/: apriltag_localization.launch
catkin_ws/src/AprilTagLocalization/rviz/: rviz_config.rviz
catkin_ws/src/AprilTagLocalization/src/: apriltag_localization.cpp  apriltag_localization_node.cpp
catkin_ws/src/control_space_planner/: CMakeLists.txt  package.xml
catkin_ws/src/control_space_planner/launch/: project_3.code-workspace  run.launch  run_teb_planner.launch
catkin_ws/src/control_space_planner/scripts/: control_space_planner.py  custom_vector_planner.py  rtab_local_planner.py
catkin_ws/src/controller/: CMakeLists.txt  armpi_teleop.py  auto_pick_checkpoint.py  detect_live.py  detect_live.py.save  gripper_status.py  package.xml  pick_arm_node.py  pick_controller.py  pick_controller_checkpoint.py  test_gripper.launch  yolo_detector.py
catkin_ws/src/gpt_llm_client/: CMakeLists.txt
catkin_ws/src/hw4_exploration/: CMakeLists.txt  package.xml
catkin_ws/src/local_costmap_generator/: CMakeLists.txt
catkin_ws/src/re540_final_map/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/re540_final_map/materials/scripts/: signboards.material  stores.material
catkin_ws/src/re540_final_map/models/: Final_map.stl  model.config  model.sdf
catkin_ws/src/re540_final_map/scripts/: fix_world_paths.py
catkin_ws/src/re540_final_map/worlds/: final_map.world
catkin_ws/src/robot_web_ui/: CMakeLists.txt  package.xml
(+48 files in other folders)
