<?xml version="1.0"?>
<package format="2">
  <name>re540_final_map</name>
  <version>1.0.0</version>
  <description>Final map package containing world files, materials, and models for RE540 project</description>

  <maintainer email="kyc10206@kaist.ac.kr">Yeonchan Kim</maintainer>
  <maintainer email="sungjae_min@kaist.ac.kr">Sungjae Min</maintainer>
  <maintainer email="donghun.han@kaist.ac.kr">Donghun Han</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>
